adding retry fallback method for ratpack